--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -9759,12 +9759,14 @@ body {
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/main-background.jpeg") no-repeat center center;
     background-size: cover;
     background-position: 50%;
-    height: 100vh;
+   /* height: 100vh; */
+    height: calc(100vh - 100px);
     min-height: 480px;
 }
 
 .ww-home-page .ww-wedding-announcement {
-    width: 100%;
+    /*width: 100%; */
+    width: 70%;
     max-width: 1600px;
     margin: 0 auto;
     height: 140%;
